# OpenGlExamples

./: CMakeLists.txt  README.md
FirstShader/: firstShader.cpp
HelloOpenGL/: helloOpenGL.cpp
MovingTriangle/: moving_triangle.cpp  moving_triangle_vertex.glsl
ToggleCube/: toggle_cube.cpp  toggle_cube_fragment.glsl  toggle_cube_vertex.glsl
common/include/: asset.hpp.in
shaders/: firstShader.frag  firstShader.vert
